more structure, fixss, todo: collapse nav menu, strange width on third page

--- a/experiments/mkdocs/minimal-custom-theme/custom_theme/css/index.css
+++ b/experiments/mkdocs/minimal-custom-theme/custom_theme/css/index.css
@@ -18,11 +18,19 @@ body {
   padding: 10px;
 }
 
-body {
-  margin: 0 auto;
-  max-width: 800px;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width: 1100px) {
+  body {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    margin-right: 10px;
+  }
+
+  .content {
+    margin: auto;
+  }
 }
 
 h1 {
